@@ -10,9 +10,9 @@
 01  0 0  00
 01 00 00 00
 0 0 0 0
-00 00 00 00  00 ff ff ff	# last LBA
+00 00 00 00  00 ff ff ff        # last LBA
 0 0 0 0 0 0 0 0  0 0 0 0 0 0
-00 00		# FMPTINFO, Protection field usage and protection interval exp
+00 00           # FMPTINFO, Protection field usage and protection interval exp
 0 0 0 0 0 0 0 0  0 0 0 0 0 0 0 0
 0 0 0 0 0 0 0 0  
 
@@ -21,9 +21,9 @@
 02  0 0  00
 01 00 00 00
 0 0 0 0
-00 00 00 00  01 ff ff ff	# last LBA
+00 00 00 00  01 ff ff ff        # last LBA
 0 0 0 0 0 0 0 0  0 0 0 0 0 0
-00 00		# FMPTINFO, Protection field usage and protection interval exp
+00 00           # FMPTINFO, Protection field usage and protection interval exp
 # host-aware zones schema type specific information
 5 ff
 0 0 0 0 0 0 0 0  0 0
