@@ -16,7 +16,7 @@
 12 00
 83 02 10 11
 84 01 07
-00 00 	# pad
+00 00   # pad
 
 00 04 00 1c
 00 00 00 00 00 1c 00 40  00 01 22 33
@@ -25,7 +25,7 @@
 00 08 00 04
 02
 02 e9
-00	# pad
+00      # pad
 
 00 0c 00 0c
 00 08
@@ -33,7 +33,7 @@
 00 01
 c0 00
 ff ff
-00 00	# pad
+00 00   # pad
 
 00 0d 00 14
 12
