@@ -2,7 +2,7 @@ sg3-utils (1.49-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 21 Aug 2023 18:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 05 Sep 2023 19:00:00 -0400
 
 sg3-utils (1.48-0.1) unstable; urgency=low
 
